--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -379,6 +379,7 @@
     <Compile Include="Facturacion\fa_cliente_Data.cs" />
     <Compile Include="Facturacion\fa_cliente_tipo_Data.cs" />
     <Compile Include="Facturacion\fa_cliente_x_fa_Vendedor_x_sucursal_Data.cs" />
+    <Compile Include="Facturacion\fa_cuotas_x_doc_Data.cs" />
     <Compile Include="Facturacion\fa_factura_Data.cs" />
     <Compile Include="Facturacion\fa_factura_det_Data.cs" />
     <Compile Include="Facturacion\fa_formaPago_Data.cs" />
