--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Facturacion\fa_factura_Bus.cs" />
     <Compile Include="Facturacion\fa_factura_det_Bus.cs" />
     <Compile Include="Facturacion\fa_formaPago_Bus.cs" />
+    <Compile Include="Facturacion\fa_parametro_Bus.cs" />
     <Compile Include="Facturacion\fa_proforma_Bus.cs" />
     <Compile Include="Facturacion\fa_proforma_det_Bus.cs" />
     <Compile Include="Facturacion\fa_PuntoVta_Bus.cs" />
