--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -390,6 +390,7 @@
     <Compile Include="Facturacion\fa_TerminoPago_Data.cs" />
     <Compile Include="Facturacion\fa_TerminoPago_Distribucion_Data.cs" />
     <Compile Include="Facturacion\fa_TipoNota_Data.cs" />
+    <Compile Include="Facturacion\fa_TipoNota_x_Empresa_x_Sucursal_Data.cs" />
     <Compile Include="Facturacion\fa_Vendedor_Data.cs" />
     <Compile Include="fa_cliente.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
