--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1442,6 +1442,9 @@
     <Compile Include="vwfa_factura.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwfa_factura_det.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwfa_proforma.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
