--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -317,6 +317,7 @@
     <Compile Include="Areas\Importacion\Controllers\GastosImportacionController.cs" />
     <Compile Include="Areas\Importacion\Controllers\OrdenCompraExteriorController.cs" />
     <Compile Include="Areas\Importacion\Controllers\ParametrosImportacionController.cs" />
+    <Compile Include="Areas\Importacion\Controllers\RecepcionOrdenCompraController.cs" />
     <Compile Include="Areas\Importacion\ImportacionAreaRegistration.cs" />
     <Compile Include="Areas\Inventario\Controllers\CatalogoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\CatalogoTipoInventarioController.cs" />
@@ -8799,6 +8800,15 @@
     <Content Include="Areas\Facturacion\Views\ParametrosFacturacion\Index.cshtml" />
     <Content Include="Areas\Importacion\Views\OrdenCompraExterior\_CmbProducto_Importacion.cshtml" />
     <Content Include="Areas\Facturacion\Views\TipoNota\_GridViewPartial_tipo_nota_sucursal.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\_CmbCuenta_contable.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\_CmbProducto_Importacion.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\_CmbProveedor_exterior.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\_GridViewPartial_orden_compra_ext.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\_GridViewPartial_orden_compra_ext_det.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\Anular.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\Index.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\Modificar.cshtml" />
+    <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
