--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -429,9 +429,6 @@
     <Compile Include="fa_notaCreDeb.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
-    <Compile Include="fa_notaCreDeb1.cs">
-      <DependentUpon>Model_facturacion.tt</DependentUpon>
-    </Compile>
     <Compile Include="fa_notaCreDeb_det.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
@@ -1479,6 +1476,9 @@
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwfa_factura_det.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwfa_notaCreDeb.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwfa_proforma.cs">
