--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -258,6 +258,10 @@
     <Compile Include="Reportes\Facturacion\FAC_005_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_005_resumen_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_006_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_007_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_008_cancelaciones_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_008_Info.cs" />
+    <Compile Include="Reportes\Importacion\IMP_001_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Info.cs" />
