--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -384,6 +384,7 @@
     <Compile Include="Facturacion\fa_factura_det_Data.cs" />
     <Compile Include="Facturacion\fa_formaPago_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Data.cs" />
+    <Compile Include="Facturacion\fa_notaCreDeb_det_Data.cs" />
     <Compile Include="Facturacion\fa_parametro_Data.cs" />
     <Compile Include="Facturacion\fa_proforma_Data.cs" />
     <Compile Include="Facturacion\fa_proforma_det_Data.cs" />
