--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8834,6 +8834,24 @@
     <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\Modificar.cshtml" />
     <Content Include="Areas\Importacion\Views\RecepcionOrdenCompra\Nuevo.cshtml" />
     <Content Include="Areas\Reportes\Views\ImportacionReportes\IMP_001.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\Nuevo.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\Modificar.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\Index.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\Anular.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_GridViewPartial_NotaCrebitoFacturacion.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_CmbCliente_NotaCrebitoFacturacion.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_CmbProducto_NotaCrebitoFacturacion.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_GridViewPartial_NotaCrebitoFacturacion_det.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_GridViewPartial_LoteNotaCrebitoFacturacion.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\Nuevo.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\Modificar.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\Index.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\Anular.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_NotaDebitoFacturacion.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_CmbCliente_NotaDebitoFacturacion.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_CmbProducto_NotaDebitoFacturacion.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_NotaDebitoFacturacion_det.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_LoteNotaDebitoFacturacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -8906,8 +8924,6 @@
     <Folder Include="Areas\CuentasPorCobrar\Models\" />
     <Folder Include="Areas\CuentasPorPagar\Models\" />
     <Folder Include="Areas\Facturacion\Models\" />
-    <Folder Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\" />
-    <Folder Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\" />
     <Folder Include="Areas\General\Models\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
