--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -677,11 +677,11 @@
     <Compile Include="Reportes\Facturacion\FAC_007_Rpt.Designer.cs">
       <DependentUpon>FAC_007_Rpt.cs</DependentUpon>
     </Compile>
-    <Compile Include="Reportes\Facturacion\FAC_008_cancelaciones_Rpt.cs">
+    <Compile Include="Reportes\Facturacion\FAC_008_aplicaciones_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Reportes\Facturacion\FAC_008_cancelaciones_Rpt.Designer.cs">
-      <DependentUpon>FAC_008_cancelaciones_Rpt.cs</DependentUpon>
+    <Compile Include="Reportes\Facturacion\FAC_008_aplicaciones_Rpt.Designer.cs">
+      <DependentUpon>FAC_008_aplicaciones_Rpt.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\Facturacion\FAC_008_Rpt.cs">
       <SubType>Component</SubType>
@@ -8852,6 +8852,7 @@
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_CmbProducto_NotaDebitoFacturacion.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_NotaDebitoFacturacion_det.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_GridViewPartial_LoteNotaDebitoFacturacion.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_007.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9101,6 +9102,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Facturacion\FAC_007_Rpt.resx">
       <DependentUpon>FAC_007_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Facturacion\FAC_008_aplicaciones_Rpt.resx">
+      <DependentUpon>FAC_008_aplicaciones_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Facturacion\FAC_008_Rpt.resx">
+      <DependentUpon>FAC_008_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Importacion\IMP_001_Rpt.resx">
       <DependentUpon>IMP_001_Rpt.cs</DependentUpon>
