gastos por liquidacion

--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -505,6 +505,7 @@
     <Compile Include="Importacion\imp_liquidacion_det_x_imp_orden_compra_ext_Data.cs" />
     <Compile Include="Importacion\imp_ordencompra_ext_Data.cs" />
     <Compile Include="Importacion\imp_ordencompra_ext_det_Data.cs" />
+    <Compile Include="Importacion\imp_orden_compra_ext_ct_cbteble_det_gastos_Data.cs" />
     <Compile Include="Importacion\imp_orden_compra_ext_recepcion_Data.cs" />
     <Compile Include="Importacion\imp_parametro_Data.cs" />
     <Compile Include="imp_catalogo.cs">
@@ -1501,6 +1502,9 @@
     </Compile>
     <Compile Include="VWIMP_001.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwimp_liquidacion_det_x_imp_orden_compra_ext.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwimp_orden_compra_ext.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
