--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Importacion\imp_liquidacion_det_x_imp_orden_compra_ext_Info.cs" />
     <Compile Include="Importacion\imp_ordencompra_ext_det_Info.cs" />
     <Compile Include="Importacion\imp_ordencompra_ext_Info.cs" />
+    <Compile Include="Importacion\imp_orden_compra_ext_ct_cbteble_det_gastos_Info.cs" />
     <Compile Include="Importacion\imp_orden_compra_ext_recepcion_Info.cs" />
     <Compile Include="Importacion\imp_parametro_Info.cs" />
     <Compile Include="Inventario\in_CatalogoTipo_Info.cs" />
