subida de clases para la guia

--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -123,6 +123,9 @@
     <Compile Include="Facturacion\fa_factura_Bus.cs" />
     <Compile Include="Facturacion\fa_factura_det_Bus.cs" />
     <Compile Include="Facturacion\fa_formaPago_Bus.cs" />
+    <Compile Include="Facturacion\fa_guia_remision_Bus.cs" />
+    <Compile Include="Facturacion\fa_guia_remision_det_Bus.cs" />
+    <Compile Include="Facturacion\fa_guia_remision_det_x_factura_Bus.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Bus.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_det_Bus.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_x_fa_factura_NotaDeb_Bus.cs" />
