--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -383,6 +383,9 @@
     <Compile Include="Facturacion\fa_factura_Data.cs" />
     <Compile Include="Facturacion\fa_factura_det_Data.cs" />
     <Compile Include="Facturacion\fa_formaPago_Data.cs" />
+    <Compile Include="Facturacion\fa_guia_remision_Data.cs" />
+    <Compile Include="Facturacion\fa_guia_remision_det_Data.cs" />
+    <Compile Include="Facturacion\fa_guia_remision_det_x_factura_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_det_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_x_fa_factura_NotaDeb_Data.cs" />
@@ -426,6 +429,15 @@
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="fa_formaPago.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="fa_guia_remision.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="fa_guia_remision_det.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="fa_guia_remision_det_x_factura.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="fa_notaCreDeb.cs">
@@ -1486,12 +1498,6 @@
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwfa_notaCreDeb.cs">
-      <DependentUpon>Model_facturacion.tt</DependentUpon>
-    </Compile>
-    <Compile Include="vwfa_notaCreDeb_det.cs">
-      <DependentUpon>Model_facturacion.tt</DependentUpon>
-    </Compile>
-    <Compile Include="vwfa_notaCreDeb_x_fa_factura_NotaDeb.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwfa_proforma.cs">
