--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Areas\Facturacion\Controllers\TipoNotaController.cs" />
     <Compile Include="Areas\Facturacion\Controllers\VendedorController.cs" />
     <Compile Include="Areas\Facturacion\FacturacionAreaRegistration.cs" />
+    <Compile Include="Areas\Facturacion\GuiaRemisionController.cs" />
     <Compile Include="Areas\General\Controllers\BancoController.cs" />
     <Compile Include="Areas\General\Controllers\BodegaController.cs" />
     <Compile Include="Areas\General\Controllers\CatalogoController.cs" />
@@ -8941,6 +8942,7 @@
     <Folder Include="Areas\CuentasPorCobrar\Models\" />
     <Folder Include="Areas\CuentasPorPagar\Models\" />
     <Folder Include="Areas\Facturacion\Models\" />
+    <Folder Include="Areas\Facturacion\Views\GuiaRemision\" />
     <Folder Include="Areas\General\Models\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
